# gazebo-scenario-plugins

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci_cd.yml  style.yml
plugins/actuation_delay/: ActuationDelay.cpp  ActuationDelay.h  CMakeLists.txt  README.md
plugins/low_pass_target/: CMakeLists.txt  LowPassTarget.cpp  LowPassTarget.h  README.md
python/gazebo_scenario_plugins/: __init__.py  plugin.py  plugins.py
python/gazebo_scenario_plugins/pycontrollers/: __init__.py  osqp_utils.py  qp.py  references.py  velocity_wb_controller.py
scripts/: generate_trajectories.py  run_vel_qp.py
tests/: pytest.ini  test_actuation_delay.py
