# Copyright (C) 2021 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# GNU Lesser General Public License v2.1 or any later version.

[metadata]
name = gazebo_scenario_plugins
description = Plugins for the Ignition Gazebo simulator implemented with ScenarIO.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = dgferigo@gmail.com
license = LGPL
license_file = LICENSE
platforms = linux
url = https://github.com/ami-iit/gazebo-scenario-plugins

project_urls =
    Changelog = https://github.com/ami-iit/gazebo-scenario-plugins/releases
    Tracker = https://github.com/ami-iit/gazebo-scenario-plugins/issues
    Source = https://github.com/ami-iit/gazebo-scenario-plugins

keywords =
    gazebo
    ignition
    simulation
    robotics
    plugin

classifiers =
    Development Status :: 4 - Beta
    Operating System :: POSIX :: Linux
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Physics
    Framework :: Robot Framework
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

[options]
zip_safe = False
packages = find:
package_dir =
    =python
python_requires = >=3.8

[options.packages.find]
where = python

[options.extras_require]
test =
    pytest
    pytest-icdiff
    numpy
    gym
    gym_ignition>=1.3.0
    gym_ignition_models
all =
    %(test)s

[tool:pytest]
addopts = -rsxX -v
testpaths = tests
